--- a/01.html
+++ b/01.html
@@ -9,6 +9,8 @@
 <body>
     <div id="app">
         <h1>{{titulo}}</h1>
+    <input type="text" v-model="nuevafruta">
+    <button @click="agregarFruta">Agregar</button>
     <ul>
         <li v-for="fruta of frutas"> {{fruta.cantidad}}-{{fruta.nombre}}
             <span v-if="fruta.cantidad == 0">Sin Stock</span>
