--- a/01.html
+++ b/01.html
@@ -9,14 +9,18 @@
 <body>
     <div id="app">
         <h1>{{titulo}}</h1>
-    <input type="text" v-model="nuevafruta">
+    <input type="text" v-model="nuevafruta" @keyup.enter="agregarFruta">
     <button @click="agregarFruta">Agregar</button>
     <ul>
-        <li v-for="fruta of frutas"> {{fruta.cantidad}}-{{fruta.nombre}}
+        <li v-for="fruta of frutas"> 
+            <input type="number" v-model.number="fruta.cantidad">
+            {{fruta.nombre}}
+            <button @click="fruta.cantidad++">+</button>
             <span v-if="fruta.cantidad == 0">Sin Stock</span>
             <span v-if="fruta.cantidad > 0">En Stock</span>
         </li>
     </ul>
+    <h4>TOTAL {{sumarfrutas}}</h4>
 
     </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
